# myna

./: Cargo.toml  okimochi_dump.md  readme.md
src/: card.rs  crypto.rs  error.rs  lib.rs  test_vector.rs  utils.rs
src/card/: _apdu  apdu.rs  apdu_trait.rs  binary_reader.rs  responder.rs
src/test_vector/: auth-cert-fingerprint-sha256  auth-cert-myna-sigval.b64  auth-cert-myna-tbscert.b64  auth-cert-myna-tbscert.sha256  auth-cert-myna.cer  auth-cert-myna.pem  auth-message1-sha1rsapkcs.sig  auth-message1-sha256rsapkcs.sig  auth-pubkey-myna.der  auth-pubkey-myna.pem  authca01.cer
