[package]
name = "myna"
version = "0.1.0"
authors = ["yuki-js <20838151+yuki-js@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.2.0"
der-parser = "3.0.3"
hex-literal = "0.2.1"
failure = "0.1.6"
des = "0.3.0"
block-modes = "0.3.3"
