[package]
name = "myna"
version = "0.2.0"
authors = ["yuki-js <20838151+yuki-js@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
description = "mynumber library"
repository = "https://github.com/my-number/myna"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.2.0"
der-parser = "3.0.3"
hex-literal = "0.2.1"
failure = "0.1.6"
x509-parser = "0.7.0"
sha2 = "0.8.1"
